<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">KirshiApps</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="sign_to_continue">Sign to continue</string>
    <string name="phone_number">Phone number</string>
    <string name="login">Login</string>
    <string name="create_account_tools">Don\'t have account? Create a new account</string>
    <string name="register_account">Don\'t have account? </string>
    <string name="create_account">Create a new account</string>
    <string name="enter_valid_phone">Please enter valid phone number</string>
    <string name="enter_user_phone">User phone number does not exist</string>
    <string name="create_account_register">Create Account</string>
    <string name="already_had_account">Already have a account? Login</string>
    <string name="had_account">Already have a account?</string>
    <string name="title">Title</string>
    <string name="wallet_amount">Wallet Amount</string>
    <string name="inr">100 INR</string>
    <string name="home">Home</string>
    <string name="enter_amount">Please enter the amount</string>
    <string name="enter_phoneNumber">Please enter the Phone number</string>
    <string name="send_money">Send money</string>
    <string name="transfer">Transfer amount</string>
    <string name="transcation">Transcation details</string>
    <string name="logout">Logout</string>
    <string name="send">Send</string>
    <string name="credit">Credit</string>
    <string name="debit">Debit</string>
</resources>