<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="phoneNumber"
            type="String" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_ride"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.97" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.03" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.3" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/create_register"
            style="@style/textViewHeader"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/create_account_register"
            app:layout_constraintEnd_toStartOf="@+id/gl_ride"
            app:layout_constraintStart_toStartOf="@+id/gl_left"
            app:layout_constraintTop_toTopOf="@+id/gl_top" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_create_account"
            style="@style/textViewSmaller"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_account"
            app:layout_constraintEnd_toStartOf="@+id/gl_ride"
            app:layout_constraintStart_toStartOf="@+id/gl_left"
            app:layout_constraintTop_toBottomOf="@+id/create_register" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_20sdp"
            app:layout_constraintEnd_toStartOf="@+id/gl_ride"
            app:layout_constraintStart_toStartOf="@+id/gl_left"
            app:layout_constraintTop_toBottomOf="@+id/tv_create_account">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_phone_number"
                style="@style/editTextMedium"
                android:background="@android:color/white"
                android:hint="@string/phone_number"
                android:maxLength="10"
                android:inputType="number"/>
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_register"
            style="@style/buttonMedium"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:layout_marginRight="20dp"
            android:background="@color/green"
            android:text="@string/create_account_register"
            app:layout_constraintEnd_toStartOf="@+id/gl_ride"
            app:layout_constraintStart_toStartOf="@+id/gl_left"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_already_account"
            style="@style/textViewSmaller"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_30sdp"
            android:text="@string/already_had_account"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/gl_ride"
            app:layout_constraintStart_toStartOf="@+id/gl_left" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
