<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingRight="@dimen/_5sdp"
    android:paddingLeft="@dimen/_5sdp"
    android:paddingTop="@dimen/_5sdp"
    android:paddingBottom="@dimen/_4sdp"
    android:background="@android:color/transparent"
    android:clipToPadding="false">

    <androidx.cardview.widget.CardView
        android:id="@+id/item_transaction_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="4dp"
        android:translationZ="8dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_10sdp"
            android:clipToPadding="false">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/rv_transaction_number"
                style="@style/textViewMedium"
                android:textStyle="normal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:gravity="start"
                android:textColor="@color/black"
                app:layout_constraintEnd_toStartOf="@+id/tv_transaction_type"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/send_money" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/rv_transaction_amount"
                style="@style/textViewSmallerBold"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:gravity="start"
                app:layout_constraintEnd_toStartOf="@+id/tv_transaction_type"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rv_transaction_number"
                tools:text="@string/inr" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/rv_transaction_phone_number"
                style="@style/textViewSmaller"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:gravity="start"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/tv_transaction_type"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rv_transaction_amount"
                tools:text="9632588988" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_transaction_type"
                style="@style/textViewSmaller"
                android:layout_width="@dimen/_70sdp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:background="@color/red"
                android:paddingTop="@dimen/_5sdp"
                android:paddingBottom="@dimen/_5sdp"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/debit" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>